2007-05-02 Igor Zelmanovich <igorz@mainsoft.com>

	* Control.cs: ResolveClientUrl: optimization.
	if basePath is the same as TemplateSourceDirectory 
	releativeUrl is returned as is.

2007-05-02 Igor Zelmanovich <igorz@mainsoft.com>

	* Control.cs:
	ResolveClientUrl considers TemplateSourceDirectory property.

2007-04-30 Konstantin Triger <kostat@mainsoft.com>

	* DataBinder.cs: When formatting, threat empty string as null.

2007-04-19  Gert Driesen  <drieseng@users.sourceforge.net>

	* TemplateParser.cs: On 2.0 profile, allow namespace in ClassName
	attribute. Fixes part of bug #81399.

2007-04-11  Marek Habersack  <mhabersack@novell.com>

	* Page.cs: check whether control passed to
	RegisterRequiresPostBack implements the IPostBackDataHandler
	interface.

2007-04-06  Marek Habersack  <mhabersack@novell.com>

	* ClientScriptManager.cs: render the 'type' attribute in
	WriteScript and do not render the 'language' attribute when in
	NET_2_0+ mode.

	* Page.cs: defaults for ViewStateEncrptionMode and AsyncTimeout
	are read from the pages section, if found.

	* TemplateControlParser.cs: added support for loading
	pages/controls defaults from web.config even if the page/control
	does not have its corresponding directive.
	Added support for reading the CompilationMode attribute.

	* PageParser.cs: added support for loading pages/controls defaults
	as above. Fixes bug #80915.
	Added support for reading the maxPageStateFieldLength setting.
	Added support for reading the pageParserFilter setting.
	
	* ControlBuilder.cs: allow tag mappings from code found 
	in bin/* or App_Code/*. Fixes bug #80811.

2007-03-29  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* TemplateControl.jvm.cs: performance improvement, added cache for
	methods and events in user code

2007-03-26  Marek Habersack  <mhabersack@novell.com>

	* TemplateControl.cs: make local resources work with master
	pages - use the AppRelativeVirtualPath for resource resolution.
