@@ -1,3 +1,10 @@
+2007-05-03 Igor Zelmanovich <igorz@mainsoft.com>
+
+	* CssStyleCollection.cs: optimization:
+	used StringBuilder instead string to hold value.
+	When added key that not exists in collection, value is recalculated by 
+	appending required key to existing value.	
+
 2007-05-02 Igor Zelmanovich <igorz@mainsoft.com>
 
 	* Control.cs: ResolveClientUrl: optimization.
